📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -19022,5 +19022,101 @@
         "published": "Wed, 17 Dec 2025 22:20:00 GMT",
         "source": "Latest news",
         "summary": "The OnePlus 15R has launched with specs that outpace its closest competitors - and more expensive rivals."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/17/adobe-hit-with-proposed-class-action-accused-of-misusing-authors-work-in-ai-training/",
+        "title": "Adobe hit with proposed class-action, accused of misusing authors\u2019 work in AI training",
+        "link": "https://techcrunch.com/2025/12/17/adobe-hit-with-proposed-class-action-accused-of-misusing-authors-work-in-ai-training/",
+        "published": "Thu, 18 Dec 2025 00:44:55 +0000",
+        "source": "TechCrunch",
+        "summary": "The lawsuit is just the latest in a string of copyright-related legal complaints aimed at the AI industry."
+    },
+    {
+        "id": "https://www.theverge.com/news/846905/snap-snapchat-quick-cut-video-editor",
+        "title": "Snapchat\u2019s new Quick Cut stitches a video together for you",
+        "link": "https://www.theverge.com/news/846905/snap-snapchat-quick-cut-video-editor",
+        "published": "2025-12-17T18:55:55-05:00",
+        "source": "The Verge",
+        "summary": "Snap just launched a new Quick Cut video editing tool right inside Snapchat that \"helps Snapchatters turn their favorite Memories into beat-synced, ready-to-share videos in seconds.\" With Quick Cut, you can select multiple photos or clips and then \"instantly preview a rendered video,\" and the feature is accessible from multiple places in the app, including [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/846903/billionaire-jared-isaacman-confirmed-as-new-head-of-nasa",
+        "title": "Billionaire Jared Isaacman confirmed as new head of NASA",
+        "link": "https://www.theverge.com/news/846903/billionaire-jared-isaacman-confirmed-as-new-head-of-nasa",
+        "published": "2025-12-17T18:36:06-05:00",
+        "source": "The Verge",
+        "summary": "The Senate confirmed Jared Isaacman's appointment as the head of NASA on Wednesday, a decision that comes just months after President Donald Trump pulled his nomination before picking him yet again in November, as reported earlier by CNBC. Isaacman, the founder and CEO of a payments platform called Shift4, has flown to space twice through [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/physicists-3d-printed-a-christmas-tree-of-ice/",
+        "title": "Physicists 3D-printed a Christmas tree of ice",
+        "link": "https://arstechnica.com/science/2025/12/physicists-3d-printed-a-christmas-tree-of-ice/",
+        "published": "Wed, 17 Dec 2025 22:46:21 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "New method uses no freezing technology or refrigeration equipment\u2014just water and a vacuum."
+    },
+    {
+        "id": "https://arstechnica.com/ai/2025/12/openais-new-chatgpt-image-generator-makes-faking-photos-easy/",
+        "title": "OpenAI\u2019s new ChatGPT image generator makes faking photos easy",
+        "link": "https://arstechnica.com/ai/2025/12/openais-new-chatgpt-image-generator-makes-faking-photos-easy/",
+        "published": "Wed, 17 Dec 2025 22:22:33 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "New GPT Image 1.5 allows more detailed conversational image editing, for better or worse."
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/china-reportedly-has-a-prototype-euv-machine-built-by-ex-asml-employees-235833756.html?src=rss",
+        "title": "China reportedly has a prototype EUV machine built by ex-ASML employees",
+        "link": "https://www.engadget.com/big-tech/china-reportedly-has-a-prototype-euv-machine-built-by-ex-asml-employees-235833756.html?src=rss",
+        "published": "Wed, 17 Dec 2025 23:58:33 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>A report from <a class=\"link\" href=\"https://www.reuters.com/world/china/how-china-built-its-manhattan-project-rival-west-ai-chips-2025-12-17/\" target=\"_blank\"><em>Reuters</em></a> claims that scientists in China have created a prototype of a machine that could eventually be used to produce semiconductor chips capable of powering artificial intelligence. Sources told the publication that a team in Shenzhen completed the prototype of an extreme ultraviolet lithography machine earlier this year "
+    },
+    {
+        "id": "https://gizmodo.com/it-welcome-to-derry-finale-pennywise-figure-neca-2000700907",
+        "title": "This \u2018Welcome to Derry\u2019 Figure Is Festively, Gloriously Gory",
+        "link": "https://gizmodo.com/it-welcome-to-derry-finale-pennywise-figure-neca-2000700907",
+        "published": "Wed, 17 Dec 2025 23:30:10 +0000",
+        "source": "Gizmodo",
+        "summary": "NECA's 'Ultimate Blood Pennywise' will let you act out the events of the HBO show's season one finale\u2014fog machine not included."
+    },
+    {
+        "id": "https://mashable.com/article/tesla-patent-starlink-electric-vehicles",
+        "title": "It sure looks like Tesla wants to put Starlink satellite antennas into its EVs",
+        "link": "https://mashable.com/article/tesla-patent-starlink-electric-vehicles",
+        "published": "Wed, 17 Dec 2025 23:37:57 +0000",
+        "source": "Mashable",
+        "summary": "Tesla has filed a patent for a new roof structure that would allow satellite signals to pass through. Are Starlink antennas coming to Tesla cars?"
+    },
+    {
+        "id": "https://mashable.com/article/best-holiday-lego-sets",
+        "title": "The best holiday Lego sets you can still get in time for Christmas",
+        "link": "https://mashable.com/article/best-holiday-lego-sets",
+        "published": "Wed, 17 Dec 2025 23:01:56 +0000",
+        "source": "Mashable",
+        "summary": "Lego holiday sets are selling out \u2014 here are seven that are still available."
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-ecovacs-deebot-t80-deal",
+        "title": "Gift your home the Ecovacs Deebot T80 robot vacuum for Christmas \u2014 save 50% at Amazon",
+        "link": "https://mashable.com/article/dec-17-ecovacs-deebot-t80-deal",
+        "published": "Wed, 17 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The Ecovacs Deebot T80 robot vacuum is on sale at Amazon for $499.99, down from the list price of $999.99. That's a 50% discount."
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-filejump-2tb-cloud-storage-lifetime-subscription",
+        "title": "Stop deleting photos: FileJump\u2019s 2TB lifetime plan is $79.97",
+        "link": "https://mashable.com/article/dec-17-filejump-2tb-cloud-storage-lifetime-subscription",
+        "published": "Wed, 17 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Save 83 percent on FileJump\u2019s 2TB cloud storage lifetime subscription, now $79.97 (reg. $467) through Dec. 21."
+    },
+    {
+        "id": "https://obsproject.com/blog/obs-studio-gets-a-new-renderer",
+        "title": "OBS Studio Gets a New Renderer",
+        "link": "https://obsproject.com/blog/obs-studio-gets-a-new-renderer",
+        "published": "Wed, 17 Dec 2025 20:59:29 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46305428\">Comments</a>"
     }
 ]
