📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -19118,5 +19118,77 @@
         "published": "Wed, 17 Dec 2025 20:59:29 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46305428\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/17/instacarts-ai-driven-pricing-tool-attracted-attention-now-the-ftc-has-questions/",
+        "title": "Instacart\u2019s AI-driven pricing tool attracted attention \u2014 now the FTC has questions",
+        "link": "https://techcrunch.com/2025/12/17/instacarts-ai-driven-pricing-tool-attracted-attention-now-the-ftc-has-questions/",
+        "published": "Thu, 18 Dec 2025 02:23:43 +0000",
+        "source": "TechCrunch",
+        "summary": "In an economy where everyone's feeling squeezed, AI-driven price testing of kitchen essentials was bound to attract attention."
+    },
+    {
+        "id": "https://www.theverge.com/news/846608/lg-dolby-flexconnect-speakers-ces-2026",
+        "title": "LG and Dolby partner to release the first FlexConnect soundbar",
+        "link": "https://www.theverge.com/news/846608/lg-dolby-flexconnect-speakers-ces-2026",
+        "published": "2025-12-17T20:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Dolby Atmos FlexConnect technology debuted this year with the TCL Z100 speakers, and now we're getting our first FlexConnect soundbar thanks to LG. The new H7 soundbar - which runs on the same Alpha 11 Gen 3 chip as LG's OLEDs and new Micro RGB LED - is a part of the LG Sound Suite, [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/space/2025/12/nasa-finally-and-we-really-do-mean-it-this-time-has-a-full-time-leader/",
+        "title": "NASA finally\u2014and we really do mean it this time\u2014has a full-time leader",
+        "link": "https://arstechnica.com/space/2025/12/nasa-finally-and-we-really-do-mean-it-this-time-has-a-full-time-leader/",
+        "published": "Thu, 18 Dec 2025 00:19:11 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "A long and winding road to reach NASA's headquarters in Washington, DC."
+    },
+    {
+        "id": "https://www.engadget.com/audio/speakers/dolby-and-lg-introduce-a-modular-home-audio-system-for-ces-2026-010000126.html?src=rss",
+        "title": "Dolby and LG introduce a modular home audio system for CES 2026",
+        "link": "https://www.engadget.com/audio/speakers/dolby-and-lg-introduce-a-modular-home-audio-system-for-ces-2026-010000126.html?src=rss",
+        "published": "Thu, 18 Dec 2025 01:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>LG is teaming up with Dolby for a new collection of speakers that the companies are unveiling ahead of CES 2026. The LG Sound Suite features a modular lineup the H7 soundbar, M7 and M5 wireless surround speakers and the W7 subwoofer. The speakers can be combined in more than two dozen different configurations, from a pair to a full 13.1.7 channel surround sound home theater setup.</p><p>The main pitch of the LG Sound Suite is its application of Dolby Atmos FlexConnect. This is the audio brand"
+    },
+    {
+        "id": "https://www.zdnet.com/article/sony-bravia-theater-system-6-review/",
+        "title": "How much should you pay for a soundbar system? This Sony model is my new limit",
+        "link": "https://www.zdnet.com/article/sony-bravia-theater-system-6-review/",
+        "published": "Thu, 18 Dec 2025 02:00:38 GMT",
+        "source": "Latest news",
+        "summary": "Sony's Bravia Theater System 6 may lack some of its pricier sibling's premium extras, but it still delivers impressive sound for most genres."
+    },
+    {
+        "id": "https://www.zdnet.com/article/tcl-nxtpaper11-plus-review/",
+        "title": "The tablet that replaced my iPad and Kindle just got a worthy upgrade - and it's discounted",
+        "link": "https://www.zdnet.com/article/tcl-nxtpaper11-plus-review/",
+        "published": "Thu, 18 Dec 2025 01:30:40 GMT",
+        "source": "Latest news",
+        "summary": "The TCL Nxtpaper 11 Plus is a well-rounded Android tablet that delivers everyday performance at a price that's hard to beat."
+    },
+    {
+        "id": "https://www.zdnet.com/article/iphone-17-casual-user-review/",
+        "title": "Why this casual iPhone user upgraded to the iPhone 17 after one year - and don't regret it",
+        "link": "https://www.zdnet.com/article/iphone-17-casual-user-review/",
+        "published": "Thu, 18 Dec 2025 01:00:46 GMT",
+        "source": "Latest news",
+        "summary": "The iPhone 17 may look exactly like its predecessor, but it incorporates some of last year's Pro features that go a long way."
+    },
+    {
+        "id": "https://www.jaist.ac.jp/english/whatsnew/press/2025/12/17-1.html",
+        "title": "Gut bacteria from amphibians and reptiles achieve tumor elimination in mice",
+        "link": "https://www.jaist.ac.jp/english/whatsnew/press/2025/12/17-1.html",
+        "published": "Wed, 17 Dec 2025 23:11:14 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46306894\">Comments</a>"
+    },
+    {
+        "id": "https://blog.kestrelsnest.social/posts/2025-12-14-why-my-payment-agent-is-named-george-not-stripe-agent/",
+        "title": "My payment agent is named George, not stripe-agent",
+        "link": "https://blog.kestrelsnest.social/posts/2025-12-14-why-my-payment-agent-is-named-george-not-stripe-agent/",
+        "published": "Sun, 14 Dec 2025 18:55:30 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46265684\">Comments</a>"
     }
 ]
