📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -19190,5 +19190,45 @@
         "published": "Sun, 14 Dec 2025 18:55:30 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46265684\">Comments</a>"
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-hint-answer-today-december-18-2025",
+        "title": "NYT Connections hints today: Clues, answers for December 18, 2025",
+        "link": "https://mashable.com/article/nyt-connections-hint-answer-today-december-18-2025",
+        "published": "Thu, 18 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections is a New York Times word game that's all about finding the \"common threads between words.\" How to solve the puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/strands-nyt-hint-december-18-2025",
+        "title": "NYT Strands hints, answers for December 18, 2025",
+        "link": "https://mashable.com/article/strands-nyt-hint-december-18-2025",
+        "published": "Thu, 18 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The NYT Strands hints and answers you need to make the most of your puzzling experience."
+    },
+    {
+        "id": "https://mashable.com/article/wordle-today-answer-december-18-2025",
+        "title": "Wordle today: Answer, hints for December 18, 2025",
+        "link": "https://mashable.com/article/wordle-today-answer-december-18-2025",
+        "published": "Thu, 18 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Here's the answer for \"Wordle\" #1642 on December 18 as well as a few hints, tips, and clues to help you solve it yourself."
+    },
+    {
+        "id": "https://mashable.com/article/hurdle-hints-answers-december-18-2025",
+        "title": "Hurdle hints and answers for December 18, 2025",
+        "link": "https://mashable.com/article/hurdle-hints-answers-december-18-2025",
+        "published": "Thu, 18 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Hints and answers to today's Hurdle all in one place."
+    },
+    {
+        "id": "https://www.zdnet.com/article/kubuntu-versus-fedora-linux-distro-best-for-kde-plasma/",
+        "title": "Kubuntu vs. Fedora: Which Linux distro is right for your KDE Plasma desktop?",
+        "link": "https://www.zdnet.com/article/kubuntu-versus-fedora-linux-distro-best-for-kde-plasma/",
+        "published": "Thu, 18 Dec 2025 03:00:47 GMT",
+        "source": "Latest news",
+        "summary": "Looking for the ideal distribution for KDE Plasma? Your choice may come down to one of these two options, and the differences are subtle but significant."
     }
 ]
