📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -19230,5 +19230,21 @@
         "published": "Thu, 18 Dec 2025 03:00:47 GMT",
         "source": "Latest news",
         "summary": "Looking for the ideal distribution for KDE Plasma? Your choice may come down to one of these two options, and the differences are subtle but significant."
+    },
+    {
+        "id": "https://www.theverge.com/news/847080/sony-tencent-lawsuit-horizon-clone-light-of-motiram-settlement",
+        "title": "Sony&#8217;s legal battle against Tencent&#8217;s Horizon \u2018clone\u2019 is already over",
+        "link": "https://www.theverge.com/news/847080/sony-tencent-lawsuit-horizon-clone-light-of-motiram-settlement",
+        "published": "2025-12-17T22:57:42-05:00",
+        "source": "The Verge",
+        "summary": "In July, Sony sued Tencent to prevent the release of Light of Motiram, a game Sony alleged was a \"slavish clone\" of its popular Horizon series. But the legal battle is already over; the two companies have reached a \"confidential settlement\" and the case has been dismissed with prejudice, according to a court document filed [&#8230;]"
+    },
+    {
+        "id": "https://readwrite.com/swedish-gambling-authority-bans-make-it-holdings/",
+        "title": "Make it Holdings banned from targeting Sweden",
+        "link": "https://readwrite.com/swedish-gambling-authority-bans-make-it-holdings/",
+        "published": "Wed, 17 Dec 2025 16:30:11 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"A close-up photograph of the Swedish flag billowing dramatically in a strong breeze against a clear blue sky. Swedish court upholds gambling authority&#039;s decision against Kornhults Idrottsklubb\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/10/BF-11-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Make it Holdings Limited have been prevented from providing gambli"
     }
 ]
