📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -19246,5 +19246,21 @@
         "published": "Wed, 17 Dec 2025 16:30:11 +0000",
         "source": "ReadWrite",
         "summary": "<div><img alt=\"A close-up photograph of the Swedish flag billowing dramatically in a strong breeze against a clear blue sky. Swedish court upholds gambling authority&#039;s decision against Kornhults Idrottsklubb\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/10/BF-11-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Make it Holdings Limited have been prevented from providing gambli"
+    },
+    {
+        "id": "https://www.theverge.com/news/847067/openai-app-store-directory-sdk-chatgpt",
+        "title": "The ChatGPT app store is here",
+        "link": "https://www.theverge.com/news/847067/openai-app-store-directory-sdk-chatgpt",
+        "published": "2025-12-17T23:27:39-05:00",
+        "source": "The Verge",
+        "summary": "On Wednesday evening, OpenAI launched an App Directory to browse all the tools currently available and opened its SDK for developers to build new interactive experiences that operate within the bot's UI. OpenAI CEO Sam Altman said last month that \"We are planning to build the obvious features that you would expect for a robust [&#8230;]"
+    },
+    {
+        "id": "https://www.zeit.de/wirtschaft/2025-12/amazon-urteil-video-kunden-werbung",
+        "title": "Germany: Amazon is not allowed to force customers to watch ads on Prime Video",
+        "link": "https://www.zeit.de/wirtschaft/2025-12/amazon-urteil-video-kunden-werbung",
+        "published": "Thu, 18 Dec 2025 03:42:24 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46308706\">Comments</a>"
     }
 ]
