📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -19262,5 +19262,37 @@
         "published": "Thu, 18 Dec 2025 03:42:24 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46308706\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/max-promo-code/",
+        "title": "HBO Max Promo Code: 50% Off | This Month",
+        "link": "https://www.wired.com/story/max-promo-code/",
+        "published": "Thu, 18 Dec 2025 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Stream your favorite shows and save up to 50% today with HBO Max discount codes and subscription deals."
+    },
+    {
+        "id": "https://www.wired.com/story/t-mobile-business-promo-code/",
+        "title": "T-Mobile Business Promo Codes and Deals for November 2025",
+        "link": "https://www.wired.com/story/t-mobile-business-promo-code/",
+        "published": "Thu, 18 Dec 2025 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Discover how to save on T-Mobile Business Internet and phone plans, from sign-up perks and switching rewards to bundled offers and free lines."
+    },
+    {
+        "id": "https://mashable.com/article/stuff-your-kindle-day-december-2025",
+        "title": "Stuff Your Kindle Day is live until Dec. 20 \u2014 download wintery books for free ahead of the holidays",
+        "link": "https://mashable.com/article/stuff-your-kindle-day-december-2025",
+        "published": "Thu, 18 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to get free books on Stuff Your Kindle Day. Download free wintery books on the latest Stuff Your Kindle Day."
+    },
+    {
+        "id": "https://mashable.com/article/moon-phase-today-dec-18",
+        "title": "Moon phase today: What the moon will look like on December 18",
+        "link": "https://mashable.com/article/moon-phase-today-dec-18",
+        "published": "Thu, 18 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "See the moon phase expected for December 18, 2025 as well as when the next full moon is expected."
     }
 ]
