📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -19294,5 +19294,29 @@
         "published": "Thu, 18 Dec 2025 05:00:00 +0000",
         "source": "Mashable",
         "summary": "See the moon phase expected for December 18, 2025 as well as when the next full moon is expected."
+    },
+    {
+        "id": "https://www.theverge.com/news/847097/cowboy-acquired-by-rebirth-recycles-bankruptcy",
+        "title": "Cowboy saddles up with a new owner",
+        "link": "https://www.theverge.com/news/847097/cowboy-acquired-by-rebirth-recycles-bankruptcy",
+        "published": "2025-12-18T02:02:10-05:00",
+        "source": "The Verge",
+        "summary": "The Brussels-based electric bike company has officially closed its deal to be acquired by ReBirth Group Holding, which also owns cycling brands Peugeot, Gitane, and Solex. The transaction includes new, undisclosed funding from ReBirth as well as &#8364;15 million ($17.6 million) from existing shareholders. The funding will be used to restart production and deal with [&#8230;]"
+    },
+    {
+        "id": "https://www.bbc.com/news/articles/clyzvpp8g3vo",
+        "title": "'Ghost jobs' are on the rise \u2013 and so are calls to ban them",
+        "link": "https://www.bbc.com/news/articles/clyzvpp8g3vo",
+        "published": "Thu, 18 Dec 2025 05:06:33 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46309061\">Comments</a>"
+    },
+    {
+        "id": "https://www.johndcook.com/blog/2019/02/21/what-is-an-elliptic-curve/",
+        "title": "What Is an Elliptic Curve?",
+        "link": "https://www.johndcook.com/blog/2019/02/21/what-is-an-elliptic-curve/",
+        "published": "Thu, 18 Dec 2025 06:40:29 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46309571\">Comments</a>"
     }
 ]
