📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -19318,5 +19318,45 @@
         "published": "Thu, 18 Dec 2025 06:40:29 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46309571\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/reviews/846094/kuxiu-s3-solid-state-power-bank-review",
+        "title": "Kuxiu\u2019s S3 MagSafe power bank is bigger and better and probably won\u2019t explode",
+        "link": "https://www.theverge.com/reviews/846094/kuxiu-s3-solid-state-power-bank-review",
+        "published": "2025-12-18T02:30:14-05:00",
+        "source": "The Verge",
+        "summary": "Kuxiu is back with a new S3 portable battery that addresses most of the issues I had during my review of the S2, aka the \"world's first\" semi-solid state power bank. It also introduces a few new ones, while adding useful features like a kickstand and integrated USB-C cable. As a reminder, these are not [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/best-multi-device-wireless-charging-pads-120557582.html?src=rss",
+        "title": "The best multi-device wireless charging pads for 2026",
+        "link": "https://www.engadget.com/computing/accessories/best-multi-device-wireless-charging-pads-120557582.html?src=rss",
+        "published": "Thu, 18 Dec 2025 08:01:26 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>There\u2019s a good chance you own a couple of gadgets that support wireless charging now, be it your iPhone or Android phone, wireless earbuds or smartwatch. Multi-device<a href=\"https://www.engadget.com/best-wireless-charger-140036359.html\"> wireless chargers</a> can help power them all up in one place, without the need for a bunch of cords messing up your space. There are dozens of these accessories out there today, and we\u2019ve tested a bunch of the most popular models. You\u2019ll find out top picks "
+    },
+    {
+        "id": "https://www.zdnet.com/article/internet-review-2025-bigger-fragile-hostile-ai-influence-cloudflare/",
+        "title": "The internet in 2025: Bigger, more fragile than ever - and 'fundamentally rewired' by AI",
+        "link": "https://www.zdnet.com/article/internet-review-2025-bigger-fragile-hostile-ai-influence-cloudflare/",
+        "published": "Thu, 18 Dec 2025 08:00:45 GMT",
+        "source": "Latest news",
+        "summary": "Cloudflare's annual review describes a busier, more brittle, more hostile network. Frankly, I'm worried"
+    },
+    {
+        "id": "https://www.egyptianhieroglyphs.net/egyptian-hieroglyphs/lesson-1/",
+        "title": "Learn Egyptian Hieroglyphs",
+        "link": "https://www.egyptianhieroglyphs.net/egyptian-hieroglyphs/lesson-1/",
+        "published": "Thu, 18 Dec 2025 06:08:23 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46309407\">Comments</a>"
+    },
+    {
+        "id": "https://news.ycombinator.com/item?id=46307306",
+        "title": "Ask HN: Does anyone understand how Hacker News works?",
+        "link": "https://news.ycombinator.com/item?id=46307306",
+        "published": "Wed, 17 Dec 2025 23:58:40 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46307306\">Comments</a>"
     }
 ]
