--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -19398,5 +19398,37 @@
         "published": "Thu, 18 Dec 2025 08:12:42 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46310104\">Comments</a>"
+    },
+    {
+        "id": "https://www.engadget.com/audio/headphones/best-airpods-100041810.html?src=rss",
+        "title": "The best AirPods for 2026",
+        "link": "https://www.engadget.com/audio/headphones/best-airpods-100041810.html?src=rss",
+        "published": "Thu, 18 Dec 2025 10:01:26 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Apple\u2019s AirPods have become the default choice for many people, whether you want simple wireless earbuds that work without fuss or premium options with features like noise cancellation and spatial audio. The lineup has grown over the years, so there is now a model for almost every type of listener. Some pairs are built for all-day comfort, others focus on isolation and richer sound, and Apple\u2019s over-ear option offers a more immersive experience for movies and music.<br /><br />If you spend mo"
+    },
+    {
+        "id": "https://www.zdnet.com/article/qcy-melobuds-n70-review/",
+        "title": "Are these the best-sounding $50 earbuds I've tried? My answer was clear within minutes",
+        "link": "https://www.zdnet.com/article/qcy-melobuds-n70-review/",
+        "published": "Thu, 18 Dec 2025 09:15:39 GMT",
+        "source": "Latest news",
+        "summary": "These budget-friendly earbuds sound way better than their price would suggest."
+    },
+    {
+        "id": "https://pricetimeline.com/news/189",
+        "title": "GitHub Actions for Self-Hosted Runners Price Increase Postponed",
+        "link": "https://pricetimeline.com/news/189",
+        "published": "Thu, 18 Dec 2025 08:18:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46310146\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/astrazeneca-ai-clinical-trials-2025/",
+        "title": "AstraZeneca leads big pharma\u2019s AI clinical trials revolution with real-world patient impact",
+        "link": "https://www.artificialintelligence-news.com/news/astrazeneca-ai-clinical-trials-2025/",
+        "published": "Thu, 18 Dec 2025 10:00:00 +0000",
+        "source": "AI News",
+        "summary": "<p>Big Pharma&#8217;s AI race extends across drug discovery, development, and clinical trials\u2014but AstraZeneca has distinguished itself by deploying AI clinical trials technology at an unprecedented public health scale.&#160; While competitors optimise internal R&#38;D pipelines, AstraZeneca&#8217;s AI is already embedded in national healthcare systems, screening hundreds of thousands of patients and demonstrating what happens when AI [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintel"
     }
 ]
